--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -733,7 +733,7 @@ stellen sich selbst in Frage, falls sie sich einer Sache zu sicher fühlen (vgl.
 Sie erinnern sich auch an ihre früheren Meinungen und wann sie diese Meinungen revidieren mussten
 (vgl. \cite{Tetlock}, S.~104). Dies soll Selbstüberschätzungen verhindern.
 
-\item[Formale Modelle:]
+\item[Formale Modelle:] \hfill \\
 Trotz ihrer besseren Veranlagungen konnten auch die Foxes bei Weitem nicht die Prognosegenauigkeit
 formaler statistischer Modelle erreichen (siehe auch Abbildung~\ref{pic:Tetlock_2}). Aus diesem Grund sollten, wenn möglich, diese Methoden
 rein menschlichen Prognosen vorgezogen werden.
