--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -169,147 +169,8 @@ citecolor=MidnightBlue }
 
 \input{Inhalt/POES_Intro}
 
+\input{Inhalt/POES_Anwendungen}
 %-------------------------------------------------------------------------------
-\section{Anwendungen von Predictive Analytics im öffentlichen Sektor}
-
-% Auswahl
-% TODO Fallstudien einfach ausführlichere Beispiele
-
-\subsection{Daten}
-
-% TODO
-% 2 grundlegende Probleme
-% - Datenschutz: Achtung Privatsphäre + Angst vor Missbrauch
-% - Verzerrungen in Daten: insb. auch Big Data, Daten nicht repräsentativ,
-%     Daten kulturabhängig
-
-\subsection{Öffentliche Verwaltung}
-
-% TODO
-% Daten in der öffentlichen Verwaltung
-% Open Data Portale ( GovData.de )
-% Abgrenzung zu 'Nowcasting'
-% Predictive Analytics in Finanzbehörden
-% Predictive Policing
-% Einschätzung der politischen Stimmungslage
-% Vorhersage kultureller Unterschiede
-
-\subsubsection{Predictive Analytics in der Steuerverwaltung}
-
-Hier \cite{OECD}.
-
-% TODO
-
-% FTA: Forum on Tax Administration Survey (DE leider nicht dabei)
-
-% EINSATZGEBIETE VON PA
-
-% 1) Audit Case Selection
-
-% hauptsächliches Anwendungsgebiet (S. 20)
-%  prioritise cases for investigation, audits
-
-%  social network analysis (für bestimmte fälle, z. B. VAT carousel fraud)(S. 21-22)
-% identify risk groups where individual-level assessments may fail
-% identify links between individuals, assemble connected individuals to visualised networks
-% Analyse der networks (risk score) per Hand, rule based oder statistical model
-
-% 2) Filing (Aktenablage) and payment compliance (S. 24)
-
-% aim: secure outstanding payment or return or prevent the problem from occurring
-% predictive: identify taxpayers who are likeliy to fail to meet their obligations
-% prescriptive: how communicate most effectively with this group
-
-% 3) Debt management (S. 26)
-
-% resource priorization
-% traditional: identify groups of potentially high-risk debtors
-% new (u. A. uplift modelling): identify cases that are most likely to respond to
-%   debt-management intervention
-
-% 4) Taxpayer Service (S. 27)
-
-% z. B. Text mining and sentiment analysis
-
-% Text minining of inbound email in Singapore (S. 27-28)
-
-% identify the nature of taxpayer inquiries
-% example: identify common queries of taxpayers after policy has changed
-%   -> able to react: infos on website, updates to taxpayers (vorsorglich)
-% Text Mining replaced manual tracking of email enquiries + track enquiries more objectively
-
-% 5) Policy evaluation (S. 28)
-
-% most analytics work carried out to support operational decision-making
-% but too for decision-making in relation to strategy and policy
-
-% tax gap analysis (Steuerlücke), forecasting the impact of changes in tax policy
-
-% (S. 29) 2012 model (macro-economic) for assessment the effects of tax-reform on economy and social-welfare
-% estimate economic and social consequences of tax reform, 
-% report of analytics team played a key role in the policy reform process
-
-% DATENPROBLEME
-
- % S. 51
-% concerns about representativeness of data
-
-% data from highly biased samples (alte interventionsfälle) -> nur kleiner ausschnitt aus gesamtpopulation
-
-% selection effects -> biases
-
- % S. 52
-
-% data from randomly selected audits in US to improve representativeness
-
-% DATA COMPREHENSIVENESS (S. 52)
-
-% data for analytics project from data collected and stored for
-%   operational purposes
-
-% -> missed opportunities: not useful information for operational purposes
-%     (e. g. type of non-compliance in audit) but would be useful for analytical purposes
-%     distinct models for each risk type possible
-
-\subsubsection{Predictive Policing}
-
-Grafik aus \cite{Bode}, S.~2.
-
-\begin{figure}%[!hbt]
-\centering
-\caption{Predictive Policing Prozess}
-\includegraphics[scale=1.1]{Grafiken/Predictive_Policing_Ink.pdf} 
-\label{pic:Predictive_Policing}
-\end{figure}
-
-\subsubsection{Weitere Anwendungen}
-
-\subsubsection{Cambridge Analytica - Fallstudie}
-
-\begin{figure}%[!hbt]
-\centering
-\caption{Nutzung von Facebook Likes zur Vorhersage von Nutzerattributen}
-\includegraphics[scale=1.0]{Grafiken/Facebook_Likes_Ink.pdf} 
-\label{pic:Like_Matrix}
-\end{figure}
-
-\subsection{Gesundheit}
-
-Diese Haltung war überraschend genug, um eine Nachfrage des Journalisten
-auszulösen.
-
-% TODO
-% Google Flu Trends (vorerst gescheitert)
-% Kohortenstudien nützlich bei: bsp. Kampagnen zur öffentlichen Gesundheit
-%   bsp. Ernährungskampagnen, Anti-Rauch-Kampagnen 
-% Kohortenstudien: nicht persönlich (s. Watson, Abschnitt Cohort treatment),
-%   aber Sicherheitsbedenken bleiben (Anonymisierung nicht möglich, Sicherheits
-%   risiken ...)
-\subsubsection{Flint Trinkwasserskandal - Fallstudie}
-
-\subsection{Bildung}
-
-% Anwendungsbeispiel Decision Tree
 
 % TODO echten Titel ersinnen
 \chapter{Zusammenfassung und Fazit}
@@ -323,20 +184,7 @@ auszulösen.
 
 \input{Inhalt/Anhang_Forecasting}
 
-\chapter{Predictive Analytics mit R}
-
-Hier ist die Intro \cite{Intro_R}.
-
-% TODO
-
-% organisations mature in R -> recruits from academia (R heavily used)
-%    (OECD, S. 50) 
-
-% TODO
-% Kurzvorstellung R, Vergleich mit anderen Werkzeugen (insb. Python)
-% vllt R stark in Grafik
-% R Verwendung in Verwaltungen
-% Grafik Skripte
+\input{Inhalt/Anhang_R}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TODO Bilder
