--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -345,3 +345,11 @@ note = {Accessed: 17.11.2020},
 url = {https://goodjudgment.com/philip-tetlocks-10-commandments-of-superforecasting/},
 language = {english}
 }
+
+@misc{IT_Novum,
+title = {Big Data Analytics für die öffentliche Verwaltung},
+howpublished = {it-novum.com},
+note = {Accessed: 19.11.2020},
+url = {https://it-novum.com/ressourcen-downloads/big-data-analytics-fuer-die-oeffentliche-verwaltung/},
+language = {ngerman}
+}
