--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -29,6 +29,18 @@
 
 Hier \cite{OECD}.
 
+
+Die Anwendungen von Predictive Analytics in der Steuerverwaltung werden in einer
+Studie des \emph{Forum on Tax Administration} (FTA) diskutiert\footnote{
+Deutschland ist bei dieser Studie allerdings nicht dabei.
+}. Der folgende Text beschreibt diese Anwendungsfälle.
+
+\subsubsection{Audit Case Selection}
+
+Steuerbehörden führen Kontrollen von Unternehmen und Personen durch, um Steuerbetrug
+aufzudecken und zu verringern. Um verfügbare Ressourcen besser einzusetzen, werden mit Hilfe
+von Predictive Analytics die Fälle für die Prüfung priorisiert, bei denen der größte Betrugsverdacht
+besteht.
 % TODO
 
 % FTA: Forum on Tax Administration Survey (DE leider nicht dabei)
@@ -113,9 +125,9 @@ Grafik aus \cite{Bode}, S.~2.
 \label{pic:Predictive_Policing}
 \end{figure}
 
-\subsubsection{Weitere Anwendungen}
+\subsection{Weitere Anwendungen}
 
-\subsubsection{Cambridge Analytica - Fallstudie}
+\subsection{Cambridge Analytica - Fallstudie}
 
 \begin{figure}%[!hbt]
 \centering
