--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -974,6 +974,8 @@ die Art der Bewässerung, während der Ertrag die abhängige Variable darstellte
 
 \subsection{Werkzeuge}
 
+% verteilte Anwendungen, Cloud (Hadoop)
+
 \section{Allgemeine Risiken bei der Nutzung von Predictive Analytics}
 
 Es existieren Risiken, die dazu führen können, dass die Ziele einer
@@ -1039,6 +1041,8 @@ in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
 % subjektive Wsk füllen Entscheidungsbaum (S. 319) und Entscheidungsmatrix
 
 % Große Zahlen erforderlich
+
+% Forecasting leichter zu verstehen, für jemanden der kein Studium in Mathe etc hat.
 
 % short term predictions are possible and reasonably accurate (s. unclouded vision)
 % like weather forecasts
