--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -2,7 +2,9 @@
 
 Die Methode des Forecasting hat (bisher) noch keinen bedeutenden Durchbruch in
 der breiten Öffentlichkeit gehabt\footnote{
-
+Politiker, Experten und Kommentatoren formulieren keine subjektiven Wahrscheinlichkeiten und
+niemand verwendet den Brier Score (oder ein anderes Maß), um die Genauigkeit ihrer Prognosen
+zu prüfen. 
 }. Es gibt Stimmen, die behaupten, dass ein immenser Widerstand gegen die
 Einführung dieser Methode zu erwarten ist. Teilweise deutet sich sogar eine
 Unmöglichkeit dieser Aufgabe an. 
@@ -21,7 +23,10 @@ aber darauf hin, dass hauptsächlich operative Abteilungen (wie z. B. der Kauf u
 Gütern) betroffen sind.
 
 Somit deutet sich die Frage an, ob grundsätzliche Hindernisse bestehen, die verhindern, dass sich
-evidenzbasierte Methoden wie Forecasting und Predictive Analytics auf allen Ebenen der
+evidenzbasierte\footnote{
+Methoden, die nach wissenschaftlichen Prinzipien vorgehen und empirische Qualitätskriterien wie
+beispielsweise den Brier Score nutzen.
+} Methoden wie Forecasting und Predictive Analytics auf allen Ebenen der
 Entscheidungshierarchie etablieren. Diese Fragestellung wird im folgenden Text untersucht werden.
 
 \section{Rahmenbedingungen}
@@ -62,20 +67,10 @@ operative Manager von Firmen mit öffentlichen Auftraggebern Tätigkeiten auf op
 
 Weiterhin wird nicht davon ausgegangen, dass wichtige taktische und strategische Entscheidungen
 vollkommen automatisiert getroffen werden können. Vielmehr wird im besten Fall ein Zusammenspiel
-erwartet, bei dem Menschen entscheiden und Computer sie dabei unterstützen.
-
-
-
-% TODO Technologie prinzipiell kein Hindernis (s. IT Novum)
-
-% TODO
-% Stand Entscheidungshilfen (wie vorstellbar: Mensch entscheidet, Computer
-%   unterstützt)
-% Abgrenzung zum privaten Sektor
-% auf operativer Ebene allerdings ähnlich
-% unterschied strategisch, taktische Ebene, operativ
- 
-% s. Watson, Abschnitt Lack of regulation and algorithm bias
+erwartet, bei dem Menschen entscheiden und Computer sie dabei unterstützen. Dies wird durch
+die Risikomatrix in Abbildung~\ref{pic:Risiko_Matrix} illustriert\footnote{
+Für die Originalgrafik siehe \cite{Watson}.
+}. Das Risiko wird als akzeptabel erachtet, solange eine Person an der Entscheidung mitwirkt.
 
 \begin{figure}%[!hbt]
 \centering
@@ -84,15 +79,11 @@ erwartet, bei dem Menschen entscheiden und Computer sie dabei unterstützen.
 \label{pic:Risiko_Matrix}
 \end{figure}
 
-
-
-
-
-% TODO
-% Politiker, Experten und Kommentatoren formulieren keine subjektiven Wsk und
-% niemand berechnet den Brier Score (oder ein anderes Maß)
-% 
-
+Zudem sollte es keine grundsätzlichen technologischen Probleme bei der Einführung von
+Predictive Analytics geben. Grundlegende statistische Methoden sind bereits in
+Tabellenkalkulationsprogrammen verfügbar, für erweiterte Anwendungen existieren zahlreiche
+Varianten von Programmbibliotheken (siehe Anhang~\xcom) und Data Warehouse Lösungen sind
+ebenfalls für den öffentlichen Sektor erhältlich (vgl. \cite{IT_Novum}, S.~11).
 
 %-------------------------------------------------------------------------------
 % Tetlock kam bei seiner Studie zu dem Urteil, ...
@@ -142,30 +133,56 @@ politischen, Weltanschauung in Konflikt, die selbst nicht in ähnlicher Weise
 pragmatisch ist.
 
 %-------------------------------------------------------------------------------
+Der folgende Text bietet eine dialektische Erörterung der Konfliktfelder, die im
+Zusammenhang mit der Einführung von Predictive Analytics oder Forecasting entstehen
+können.
+
 
 \subsection{Eine pessimistische Sichtweise}
 
-%\subsubsection{}
+Die Einführung formaler Methoden zur Entscheidungsunterstützung kann zu unlösbaren Konflikten führen,
+da sie drei Verlustängste bei den betroffenen Personen weckt: Verlust von Privilegien,
+Verlust der Arbeit und Verlust der kollektiven Einheit. 
 
+\begin{description}
+\item[(1) Verlust von Privilegien:] \hfill \\
+Die Einführung einer evidenzbasierten Methode entzaubert den Entscheidungsträger\footnote{
+Hier wird vereinfacht angenommen, dass eine Person die Urteile fällt und die Entscheidungen
+trifft. Die Ausführungen sind aber auch auf Gruppen von Entscheidern (Entscheidungsgremien)
+anwendbar.
+}, da sie die Schwächen seiner Urteile offenbart. Die typischen Rechtfertigungsmuster
+(Belief System Defenses, siehe S.~\xcom)
+sind dann nicht mehr anwendbar.
+
+\item[(2) Verlust der Arbeit:] \hfill \\
+Der Entscheidungsträger verliert seine Arbeit an jemanden, der besser mit den neuen Methoden
+arbeiten kann. 
+
+% Punkt dadurch bestärkt, dass heutige Führungskräfte keine Spezialisten im Umgang mit diesen
+% Methoden sind (siehe MMS)
+
+Je mehr das Treffen von Entscheidungen zu den Haupttätigkeiten von Personen
+gehört, desto stärker betrachten sie Predictive Analytics als Gefahr für ihren
+Arbeitsplatz. Aus diesem Grund ist zu erwarten, dass das Führungspersonal auf der taktischen
+und strategischen Ebene solche Reformen am stärksten bekämpfen wird. Weiterhin wird sich Predictive
+Analytics am leichtesten auf der operativen Ebene etablieren lassen, da operatives Management meist
+auch andere Tätigkeiten wahrnimmt, auf die es sich dann stärker konzentrieren kann. Zudem verfügen
+operative Kräfte nicht über so viel Macht wie taktische oder strategische Entscheidungsträger.
+
+\item[(3) Verlust der kollektiven Einheit:] \hfill \\
+Dieser Punkt ist der subtilste von den Dreien.
+
+
+\end{description}
+
+Diese Verlustängste überwiegen so stark, dass eine 
 % TODO
-
-% 3 Ängste: Verlust Privilegien, Verlust der Arbeit, Verlust der (kollektiven) Identität
-
-%Je mehr das Treffen von Entscheidungen zur Hauptaufgabe von Personen gehört,
-%desto stärker betrachten sie \emph{predictive analytics} als eine Gefahr für
-%ihren Arbeitsplatz.
 
 %Zudem spielen politische Faktoren im öffentlichen Sektor eine größere Rolle als
 %im privaten Sektor.
 
-%Es ist zu erwarten, dass sich Predictive Analytics am leichtesten auf der operativen Ebene etablieren
-%lässt, da das Führungspersonal der taktischen und strategischen Ebene über mehr Macht verfügt.
-
 % - versch. Gruppen/Kulturen -> versch. Wahrheiten
 
-% Forecasting leichter zu sehen,
-% 
-% 
 % - Wahrheit taktisch genutzt
 
 % - Themen kontroverser (vs. z. B. Fruchtsäfte)
@@ -209,7 +226,7 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 
 \subsection{Einleitung zur Spieltheorie}
 % TODO
-
+% name metaphorisch
 
 % deadlock (S. 218(
 \begin{figure}%[!hbt]
@@ -231,7 +248,7 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \begin{figure}%[!hbt]
 \centering
 \caption{Gemischte 'Stag Hunt - Deadlock' Auszahlungsmatrix}
-\includegraphics[scale=0.7]{Grafiken/Mixed_Ink.pdf} 
+\includegraphics[scale=0.8]{Grafiken/Mixed_Ink.pdf} 
 \label{pic:Mixed}
 \end{figure}
 
