Mehr zu Ängsten

--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -1042,6 +1042,8 @@ in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
 
 % Große Zahlen erforderlich
 
+% Meisten nicht genügend Daten für PA
+
 % Forecasting leichter zu verstehen, für jemanden der kein Studium in Mathe etc hat.
 
 % short term predictions are possible and reasonably accurate (s. unclouded vision)
