--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -33,7 +33,7 @@ Entscheidungshierarchie etablieren. Diese Fragestellung wird im folgenden Text u
 
 Bei der folgenden Analyse ist es sinnvoll zwischen strategischer, taktischer und
 operativer Ebene zu unterscheiden. Im Allgemeinen lassen sich die verschiedenen
-Ebenen wie folgt abgrenzen:
+Ebenen wie folgt abgrenzen (vgl. \cite{Gluchowski}, S.~17-18):
 
 \begin{description}
 
@@ -87,13 +87,7 @@ ebenfalls für den öffentlichen Sektor erhältlich (vgl. \cite{IT_Novum}, S.~11
 
 %-------------------------------------------------------------------------------
 % Tetlock kam bei seiner Studie zu dem Urteil, ...
-Tetlock ist der Meinung, dass die Kernaufgabe politischer Weltanschauungen
-nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
-Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
-(vgl. \cite{Tetlock}, S.~39). Somit sind die Ergebnisse schlecht, weil keine
-genaue Abbildung der Realität beabsichtigt wird. Die Aufrechterhaltung von
-Glaubenssätzen, die zum kollektiven Zusammenhalt beitragen, hat höhere
-Priorität.
+Tetlock ist der Meinung, 
 
 In diesem Zusammenhang sind auch verschiedene Interpretationen des
 Wahrheitsbegriffs bedeutsam. Eine weit verbreitete Interpretation wird mit
@@ -156,10 +150,11 @@ sind dann nicht mehr anwendbar.
 
 \item[(2) Verlust der Arbeit:] \hfill \\
 Der Entscheidungsträger verliert seine Arbeit an jemanden, der besser mit den neuen Methoden
-arbeiten kann. 
-
-% Punkt dadurch bestärkt, dass heutige Führungskräfte keine Spezialisten im Umgang mit diesen
-% Methoden sind (siehe MMS)
+arbeiten kann. Diese Gefahr ist besonders dann groß, wenn in der Organisation eine Arbeitsteilung
+zwischen Spezialisten (vgl. \cite{Gluchowski}, S.~107), die Datenanalysen bereitstellen und Informationskonsumenten
+(vgl. \cite{Gluchowski}, S.~105-106), die die Informationen für Entscheidungen verwerten, besteht. 
+Da die Spezialisten, mit einer mathematiknahen Ausbildung, besser mit den Methoden umgehen können, 
+können sie die bisherigen Entscheidungsträger ablösen.
 
 Je mehr das Treffen von Entscheidungen zu den Haupttätigkeiten von Personen
 gehört, desto stärker betrachten sie Predictive Analytics als Gefahr für ihren
@@ -170,28 +165,24 @@ auch andere Tätigkeiten wahrnimmt, auf die es sich dann stärker konzentrieren 
 operative Kräfte nicht über so viel Macht wie taktische oder strategische Entscheidungsträger.
 
 \item[(3) Verlust der kollektiven Einheit:] \hfill \\
-Dieser Punkt ist der subtilste von den Dreien.
-
+Der evidenzbasierte Charakter von Forecasting und Predictive Analytics bedroht die Stabilität
+von (politischen) Weltanschauungen.
+Tetlock kam bei seiner Studie zu dem Urteil, dass die Kernaufgabe politischer Weltanschauungen
+nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
+Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
+(vgl. \cite{Tetlock}, S.~39). Die Aufrechterhaltung von Glaubenssätzen, die zum
+kollektiven Zusammenhalt beitragen, erhält also eine höhere Priorität.
+Dabei kann die investigative Art von Datenanalysen Nervosität und Unbehagen auslösen und als
+subversiv wahrgenommen werden. Politische Faktoren spielen im öffentlichen Sektor eine größere Rolle als
+im privaten Sektor und die Themengebiete sind kontroverser. Aus diesem Grund ist davon auszugehen, dass
+evidenzbasierte Methoden im öffentlichen Sektor, zumindest auf taktischer und strategischer Ebene,
+ein heikles Thema sind. 
 
 \end{description}
 
-Diese Verlustängste überwiegen so stark, dass eine 
-% TODO
-
-%Zudem spielen politische Faktoren im öffentlichen Sektor eine größere Rolle als
-%im privaten Sektor.
-
-% - versch. Gruppen/Kulturen -> versch. Wahrheiten
-
-% - Wahrheit taktisch genutzt
-
-% - Themen kontroverser (vs. z. B. Fruchtsäfte)
-% - 
-% - Ignorieren (-> Probleme menschl. Urteile)
-
-%Der investigative Charakter von Datenanalysen kann Nervosität und Unbehagen
-%auslösen.
-
+Die Verlustängste überwiegen in diesem Szenario so stark, dass eine Einführung
+evidenzbasierter Methoden strikt abgelehnt wird. Die Einführung findet dann
+entweder gar nicht statt, oder die Erkenntnisse werden ignoriert.
 
 \subsection{Eine optimistische Sichtweise}
 
@@ -199,8 +190,9 @@ Diese Verlustängste überwiegen so stark, dass eine
 
 % Formalisierung erwünscht (BBC + IC)
 
-% 
+% Externer Druck (<-> Arbeitsplatzverlust), Harmonie (<-> Privilegien), Ökumene
 
+% - versch. Gruppen/Kulturen -> versch. Wahrheiten
 Bessere Prognosen und Urteile führen zu besseren Entscheidungen. Dies bringt
 wiederum sowohl Vorteile gegenüber Konkurrenten als auch Vorteile bei der
 Auseinandersetzung mit der \glqq{Natur}\grqq\footnote{
@@ -218,7 +210,12 @@ Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist,
 mehr Menschen eine Heilung zu ermöglichen.
 }
 
+Der Wille, bessere Entscheidungen zu treffen, überwiegt in diesem Szenario, während
+die Ängste abgemildert oder ganz aufgehoben werden.
+
 \section{Spieltheoretische Betrachtung}
+
+% traditionelle vs progressive Spieler
 
 Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \emph{forecasting} oder \emph{predictive analytics}, bietet es sich an, die
