--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -99,6 +99,7 @@ includehead,includefoot}}
 %Glossar-Pakage
 % HYPERREF VOR GLOSSARIES EINFÜGEN
 \usepackage{hyperref}
+\def\UrlBreaks{\do\/\do-}
 
 \usepackage[
 nonumberlist, %keine Seitenzahlen anzeigen
