--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -349,7 +349,26 @@ language = {english}
 @misc{IT_Novum,
 title = {Big Data Analytics für die öffentliche Verwaltung},
 howpublished = {it-novum.com},
-note = {Accessed: 19.11.2020},
+note = {Zugegriffen am: 19.11.2020},
 url = {https://it-novum.com/ressourcen-downloads/big-data-analytics-fuer-die-oeffentliche-verwaltung/},
 language = {ngerman}
 }
+
+@misc{Kent,
+author = {Kent, Sherman},
+title = {Words of Estimative Probability},
+howpublished = {CIA - Center for the Study of Intelligence},
+note = {Accessed: 19.11.2020},
+url = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/books-and-monographs/sherman-kent-and-the-board-of-national-estimates-collected-essays/6words.html},
+language = {english}
+}
+
+@misc{Ford,
+author = {Ford, Harold},
+title = {A Tribute to Sherman Kent},
+howpublished = {CIA - Center for the Study of Intelligence},
+note = {Accessed: 19.11.2020},
+url = {https://www.cia.gov/library/center-for-the-study-of-intelligence/csi-publications/books-and-monographs/sherman-kent-and-the-board-of-national-estimates-collected-essays/1tribute.html},
+language = {english}
+}
+
