--- a/Text/Arbeit/Inhalt/POES_Anwendungen.tex
+++ b/Text/Arbeit/Inhalt/POES_Anwendungen.tex
@@ -22,6 +22,8 @@
 % Einschätzung der politischen Stimmungslage
 % Vorhersage kultureller Unterschiede
 
+% wackeligste Stimmen identifizieren und sie bei der Wahlwerbung zu priorisieren
+
 % TODO Daten (-> Heise) 
 % Thapa_Parycek S. 46
 
