--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -86,45 +86,43 @@ Varianten von Programmbibliotheken (siehe Anhang~\xcom) und Data Warehouse Lösu
 ebenfalls für den öffentlichen Sektor erhältlich (vgl. \cite{IT_Novum}, S.~11).
 
 %-------------------------------------------------------------------------------
-% Tetlock kam bei seiner Studie zu dem Urteil, ...
-Tetlock ist der Meinung, 
 
-In diesem Zusammenhang sind auch verschiedene Interpretationen des
-Wahrheitsbegriffs bedeutsam. Eine weit verbreitete Interpretation wird mit
-Hilfe des Pragmatismus von William James definiert (vgl. \cite{Precht}). Demnach werden
-Aussagen von Menschen als Wahrheit akzeptiert, falls die Aussagen ihnen bei der
-Orientierung in der Welt nützlich sind. Dies liefert eine Erklärung dafür, dass
-Menschen dazu tendieren Aussagen zu glauben, die ihre eigene Weltsicht
-bestätigen. Bei einer extremen Ausprägung des pragmatischen Wahrheitsbegriffs
-wird aus der Nützlichkeit einer Aussage ihr Wahrheitsgehalt abgeleitet:
-\glqq{Es ist wahr, weil es nützlich ist}\grqq.
+%In diesem Zusammenhang sind auch verschiedene Interpretationen des
+%Wahrheitsbegriffs bedeutsam. Eine weit verbreitete Interpretation wird mit
+%Hilfe des Pragmatismus von William James definiert (vgl. \cite{Precht}). Demnach werden
+%Aussagen von Menschen als Wahrheit akzeptiert, falls die Aussagen ihnen bei der
+%Orientierung in der Welt nützlich sind. Dies liefert eine Erklärung dafür, dass
+%Menschen dazu tendieren Aussagen zu glauben, die ihre eigene Weltsicht
+%bestätigen. Bei einer extremen Ausprägung des pragmatischen Wahrheitsbegriffs
+%wird aus der Nützlichkeit einer Aussage ihr Wahrheitsgehalt abgeleitet:
+%\glqq{Es ist wahr, weil es nützlich ist}\grqq.
 
-Diese radikale Wahrheitsinterpretation ist problematisch, wenn die als Wahrheit
-betrachteten Grundsätze der Realität widersprechen. Denn es gibt keine
-Möglichkeit, die Grundsätze mit Hilfe von empirischen oder logischen Beweisen
-zu revidieren und an die Realität anzupassen. Langfristig führen falsche
-Grundsätze somit zu schlechtem Urteilsvermögen, was wiederum zu schlechten
-Entscheidungen führt. Insbesondere sind Datenanalysen in einer solchen Situation
-nicht zweckdienlich, da Ergebnisse selektiv ignoriert oder abgelehnt werden.
+%Diese radikale Wahrheitsinterpretation ist problematisch, wenn die als Wahrheit
+%betrachteten Grundsätze der Realität widersprechen. Denn es gibt keine
+%Möglichkeit, die Grundsätze mit Hilfe von empirischen oder logischen Beweisen
+%zu revidieren und an die Realität anzupassen. Langfristig führen falsche
+%Grundsätze somit zu schlechtem Urteilsvermögen, was wiederum zu schlechten
+%Entscheidungen führt. Insbesondere sind Datenanalysen in einer solchen Situation
+%nicht zweckdienlich, da Ergebnisse selektiv ignoriert oder abgelehnt werden.
 
-Eine andere Interpretation von Wahrheit legt großen Wert auf die Beweisbarkeit
-von Aussagen. Eine solche Interpretation ist beispielsweise in der Wissenschaft
-verbreitet. Aussagen wird erst dann ein Wahrheitswert zugewiesen, wenn
-unwiderlegbare Beweise für die Gültigkeit der Aussage vorhanden sind. Eine
-solche Interpretation weicht stark vom pragmatischen Standpunkt ab, kann aber
-ebenfalls problematisch werden. Es besteht die Gefahr sich bei der Prüfung von
-Aussagen in Kleinigkeiten zu verlieren, handlungsunfähig zu werden oder
-nützliche Erkenntnisse zu lange anzuzweifeln\footnote{
-Beispiele für Zweifel, die gefährlich werden, weil sie Fortschritt blockieren
-sind auf Seite~\xcom erläutert.
-}.
+%Eine andere Interpretation von Wahrheit legt großen Wert auf die Beweisbarkeit
+%von Aussagen. Eine solche Interpretation ist beispielsweise in der Wissenschaft
+%verbreitet. Aussagen wird erst dann ein Wahrheitswert zugewiesen, wenn
+%unwiderlegbare Beweise für die Gültigkeit der Aussage vorhanden sind. Eine
+%solche Interpretation weicht stark vom pragmatischen Standpunkt ab, kann aber
+%ebenfalls problematisch werden. Es besteht die Gefahr sich bei der Prüfung von
+%Aussagen in Kleinigkeiten zu verlieren, handlungsunfähig zu werden oder
+%nützliche Erkenntnisse zu lange anzuzweifeln\footnote{
+%Beispiele für Zweifel, die gefährlich werden, weil sie Fortschritt blockieren
+%sind auf Seite~\xcom erläutert.
+%}.
 
-Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
-notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
-auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
-Bedauerlicherweise gerät ein solcher Pragmatismus mit jeder, insbesondere
-politischen, Weltanschauung in Konflikt, die selbst nicht in ähnlicher Weise
-pragmatisch ist.
+%Vermutlich ist für ein gutes Urteilsvermögen ein nüchterner Pragmatismus
+%notwendig, bei dem vorsichtig zwischen Nutzen und Wahrheit abgewogen wird und
+%auch unangenehme Meinungen als Wahrheit akzeptiert werden können.
+%Bedauerlicherweise gerät ein solcher Pragmatismus mit jeder, insbesondere
+%politischen, Weltanschauung in Konflikt, die selbst nicht in ähnlicher Weise
+%pragmatisch ist.
 
 %-------------------------------------------------------------------------------
 Der folgende Text bietet eine dialektische Erörterung der Konfliktfelder, die im
@@ -170,7 +168,7 @@ von (politischen) Weltanschauungen.
 Tetlock kam bei seiner Studie zu dem Urteil, dass die Kernaufgabe politischer Weltanschauungen
 nicht die Erstellung möglichst korrekter Prognosen ist, sondern die
 Aufrechterhaltung einer bequemen Illusion von Berechenbarkeit
-(vgl. \cite{Tetlock}, S.~39). Die Aufrechterhaltung von Glaubenssätzen, die zum
+(vgl. \cite{Tetlock}, S.~39). Die Stabilisierung von Glaubenssätzen, die zum
 kollektiven Zusammenhalt beitragen, erhält also eine höhere Priorität.
 Dabei kann die investigative Art von Datenanalysen Nervosität und Unbehagen auslösen und als
 subversiv wahrgenommen werden. Politische Faktoren spielen im öffentlichen Sektor eine größere Rolle als
@@ -186,30 +184,56 @@ entweder gar nicht statt, oder die Erkenntnisse werden ignoriert.
 
 \subsection{Eine optimistische Sichtweise}
 
-% + MÖGLICHKEIT BESSERE ENTSCHEIDUNGEN ZU TREFFEN
+Die zentrale Motivation dafür evidenzbasierte Methoden in einer Organisation
+einzuführen, ist die Möglichkeit zu erhalten, bessere Entscheidungen zu treffen.
+Dies bringt sowohl Vorteile gegenüber Konkurrenten als auch Vorteile beim
+\glqq{Spiel gegen die Natur\grqq{} (siehe S.~\xcom). So sind beispielsweise Staaten Stammkunden
+für Prognosen und Urteile von Experten (vgl. \cite{Roetheli}, S.~256) und haben damit ein
+starkes Interesse daran, diese zu verbessern. Es gibt auch Impulse, die direkt aus den Nachrichtendiensten
+kommen. Schon 1951 hat der CIA-Analyst Sherman Kent\footnote{
+Wegen seiner Verdienste auf diesem Gebiet wird Sherman Kent als der Vater der modernen
+nachrichtendienstlichen Tätigkeit bezeichnet (\emph{father of the modern intelligence profession},
+vgl. \cite{Ford}).
+} vorgeschlagen, dass der Grad der Unsicherheit in Zahlen anstatt vager Formulierungen
+ausgedrückt werden soll (vgl. \cite{Roche}, S.~144 und insbesondere \cite{Kent}).
+Allerdings ist damals niemand auf seinen Vorschlag eingegangen. Auch Nick Hare
+arbeitete im Auftrag des britischen Verteidigungsministeriums an der Verbesserung von Analysen und
+Prognosen (vgl. \cite{Burton}). Das Problem ist, dass die Berichte der Analysten in erzählendem Stil
+geschrieben sind und nicht konkret genug, dass nachträglich entschieden werden könnte, ob deren Prognosen
+eingetreten sind oder nicht (vgl. \cite{Burton}). So besteht das traditionelle Vorgehen darin, einer
+Person mit Expertise auf dem Gebiet nachrichtendienstliche Berichte zu präsentieren und ihre Einschätzungen
+aufschreiben zu lassen. Eine nachträgliche Kontrolle ihrer Genauigkeit findet nicht statt. Diese Probleme
+können mit evidenzbasierten Methoden vermieden werden.
 
-% Formalisierung erwünscht (BBC + IC)
+Weiterhin kann interner Druck die Ängste negieren.
+Das Festhalten an Privilegien auf Kosten der Allgemeinheit ist eine
+egoistische Handlung und birgt langfristig viel Konfliktpotential. Personen, die die
+Harmonie aufrechterhalten wollen, werden dem Druck nachgeben. 
 
-% Externer Druck (<-> Arbeitsplatzverlust), Harmonie (<-> Privilegien), Ökumene
+Nicht alle Gruppen oder Kulturen haben die gleichen Probleme mit kollektiver Identität.
+Manche Gruppen können mit evidenzbasierten Methoden besser umgehen als anderere.
+Zudem können die Gefahren amgemildert werden, indem loyale und ideologisch motivierte
+Personen mit der Durchführung beauftragt werden. Diese sind vertraut mit den
+Besonderheiten und Tabus einer Weltanschauung und können diese umgehen.
 
-% - versch. Gruppen/Kulturen -> versch. Wahrheiten
-Bessere Prognosen und Urteile führen zu besseren Entscheidungen. Dies bringt
-wiederum sowohl Vorteile gegenüber Konkurrenten als auch Vorteile bei der
-Auseinandersetzung mit der \glqq{Natur}\grqq\footnote{
-Genauer: Bei der Auseinandersetzung mit den Zwängen, die durch die Naturgesetze
-und ökonomische Prinzipien definiert werden. Verzichtet man zum Beispiel auf das 
-Rauchen kann es als eine gute Entscheidung betrachtet werden, da man dadurch
-gesünder lebt. Hierfür muss zunächst erkannt werden, dass Rauchen ungesund ist.
-Klingt heute einfach. Diese Erkenntnis zu erlangen war jedoch mit erheblichem
-Aufwand verbunden, wobei auch wissenschaftliche und statistische Methoden
-eine große Rolle spielten (vgl. zum Beispiel \cite{Proctor}).
+%-------------------------------------------------------------------------------
+%Bessere Prognosen und Urteile führen zu besseren Entscheidungen. Dies bringt
+%wiederum sowohl Vorteile gegenüber Konkurrenten als auch Vorteile bei der
+%Auseinandersetzung mit der \glqq{Natur}\grqq\footnote{
+%Genauer: Bei der Auseinandersetzung mit den Zwängen, die durch die Naturgesetze
+%und ökonomische Prinzipien definiert werden. Verzichtet man zum Beispiel auf das 
+%Rauchen kann es als eine gute Entscheidung betrachtet werden, da man dadurch
+%gesünder lebt. Hierfür muss zunächst erkannt werden, dass Rauchen ungesund ist.
+%Klingt heute einfach. Diese Erkenntnis zu erlangen war jedoch mit erheblichem
+%Aufwand verbunden, wobei auch wissenschaftliche und statistische Methoden
+%eine große Rolle spielten (vgl. zum Beispiel \cite{Proctor}).
 
-Ein weiteres Beispiel für eine Entscheidung, die nicht in erster Linie Vorteile
-gegenüber Konkurrenten verspricht, ist eine Entscheidung für eine bessere
-Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist, 
-mehr Menschen eine Heilung zu ermöglichen.
-}
-
+%Ein weiteres Beispiel für eine Entscheidung, die nicht in erster Linie Vorteile
+%gegenüber Konkurrenten verspricht, ist eine Entscheidung für eine bessere
+%Behandlungsmethode in der Medizin. Denn der primäre Zweck davon ist, 
+%mehr Menschen eine Heilung zu ermöglichen.
+%}
+%-------------------------------------------------------------------------------
 Der Wille, bessere Entscheidungen zu treffen, überwiegt in diesem Szenario, während
 die Ängste abgemildert oder ganz aufgehoben werden.
 
@@ -218,13 +242,15 @@ die Ängste abgemildert oder ganz aufgehoben werden.
 % traditionelle vs progressive Spieler
 
 Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
-\emph{forecasting} oder \emph{predictive analytics}, bietet es sich an, die
-\gls{glos:Spieltheorie} anzuwenden.
+Forecasting und Predictive Analytics, bietet es sich an, die
+\gls{glos:Spieltheorie} anzuwenden. Es werden einfache spieltheoretische Modelle
+präsentiert, die die obigen Szenarien verdeutlichen sollen.
 
 \subsection{Einleitung zur Spieltheorie}
 % TODO
 % name metaphorisch
 
+\subsection{Das pessimistische Szenario}
 % deadlock (S. 218(
 \begin{figure}%[!hbt]
 \centering
@@ -233,6 +259,8 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \label{pic:Deadlock}
 \end{figure}
 
+
+\subsection{Das optimistische Szenario}
 % stag hunt (S. 220)
 \begin{figure}%[!hbt]
 \centering
@@ -241,6 +269,7 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \label{pic:StagHunt}
 \end{figure}
 
+\subsection{Gemischtes Szenario}
 % mixed
 \begin{figure}%[!hbt]
 \centering
@@ -250,6 +279,8 @@ Aufgrund der potentiell konfliktreichen Situation rund um die Einführung von
 \end{figure}
 
 \subsection{Kritische Würdigung der spieltheoretischen Betrachtung}
+
+\subsubsection{Alternative Spielvarianten}
 
 % TODO spielen implizit spieltheorie (s. Poundstone ?)
 
