--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -194,7 +194,7 @@ kommen. Schon 1951 hat der CIA-Analyst Sherman Kent\footnote{
 Wegen seiner Verdienste auf diesem Gebiet wird Sherman Kent als der Vater der modernen
 nachrichtendienstlichen Tätigkeit bezeichnet (\emph{father of the modern intelligence profession},
 vgl. \cite{Ford}).
-} vorgeschlagen, dass der Grad der Unsicherheit in Zahlen anstatt vager Formulierungen
+} vorgeschlagen, dass der Grad der Unsicherheit einer Prognose in Zahlen anstatt vager Formulierungen
 ausgedrückt werden soll (vgl. \cite{Roche}, S.~144 und insbesondere \cite{Kent}).
 Allerdings ist damals niemand auf seinen Vorschlag eingegangen. Auch Nick Hare
 arbeitete im Auftrag des britischen Verteidigungsministeriums an der Verbesserung von Analysen und
